v3/readme.md
# Add Mongoose
* Install and configure mongoose
* Setup campground model
* Use campground model inside of your routes

# Show Page
* Review the RESTful routes we've seen so far
* Add descriptions to our campground model
* show db.collection.drop()
* Add a show route/template
* findById method

RESTFUL ROUTES

name         url          verb     desc
======================================================================
INDEX       /dogs         GET      Displays a list of all dogs
NEW         /dogs/new     GET      Displays form to make a new dog
CREATE      /dogs         POST     Add new dog to DB
SHOW        /dogs/:id     GET      Shows info about a particular dog

# Refactor Mongoose Code
* Create a models directory
* Use module.exports
* Require everything correctly!

# Add Seeds File
* Add a seeds.js file
* Run the seeds file every time the server starts

# Add the Comment model!
* Make our errors go away
* Display comments in campground show page
